# c2server

./: Cargo.toml  build.rs  implant.proto
src/: client.rs  server.rs
src/pb/: grpcapi.rs  mod.rs
