[package]
authors = ["boya <yang.wilby@gmail.com>"]
edition = "2018"
name = "c2rat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.43"
tokio = {version = "1.10.0", features = ["net", "macros", "rt-multi-thread"]}
tonic = "0.5.2"
prost = "0.8.0"

[build-dependencies]
tonic-build = "0.5.2"
